Fix site title on Safari

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,6 +11,7 @@
 }
 
 .site-title {
+    min-width: 200px;
     font-size: 26px;
     font-weight: 300;
     line-height: 56px;
